# tine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  capture.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: BACKLOG.md  BENCH.md  FEATURES.md  ISSUE-WORKFLOW.md  SCREENSHOTS.md  split-view-spec.md
flatpak/: cargo-sources.json
scripts/: bench-baseline.json  bench-policy.json  bench.mjs  check-linux-window-identity.mjs  check-mobile-layout.mjs  check-release-assets.mjs  e2e-alias.mjs  e2e-block-embed.mjs  e2e-block-ref-count.mjs  e2e-capabilities.mjs  e2e-capture.mjs  e2e-multigraph.mjs  e2e-native-titlebar.mjs  e2e-og-parity-references.mjs  e2e-page-properties.mjs  e2e-pdf-logseq.mjs  e2e-plugin-revocation.mjs  e2e-plugins.mjs  e2e-print-security.mjs  e2e-query-workspace.mjs  e2e-rename.mjs  e2e-right-sidebar-collapse.mjs  e2e-sheets.mjs  e2e-structured-paste.mjs  e2e-wayland-app-id.mjs  e2e-windows-smoke.mjs  gen_sample_pdf.py  reddit-evidence-artifact.mjs  release-readiness-lib.mjs  repro-query-collapse.mjs  run-e2e.mjs  screenshot.mjs  shot-ast-render.mjs  shot-compare.mjs  shot-conflicts.mjs  shot-features.mjs  shot-heading-edit.mjs  shot-namespace.mjs  shot-pdfdialog.mjs  shot-pdfmenu.mjs  (+15 more)
src/: App.test.tsx  App.tsx  backend.ts  capture.tsx  captureVisibility.ts  (+45 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capture.json  default.json
src-tauri/src/: backup.rs  commands.rs  graph.rs  lib.rs  main.rs  migrate_identifier.rs  settings.rs  state.rs  watcher.rs
(+211 files in other folders)
